--- a/src/css/preloader.css
+++ b/src/css/preloader.css
@@ -1,31 +1,24 @@
-#root {
-  display: none;
-}
-
 .preloader {
-  z-index: 3;
-  height: 100vh;
-  width: 100%;
   background-color: black;
+  width: 100%;
+  height: 100vh;
   position: fixed;
-  top: 0px;
-  left: 0px;
+  margin: 0;
+  padding: 0;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .text {
-  width: 100%;
-  height: 100vh;
+  opacity: 0;
   background-image: url("../img/background1.jpeg");
-  background-size: 100% 100%;
   background-position: center;
   font-family: OmegaCentauri;
   font-size: 80px;
-  text-align: center;
-  line-height: 650px;
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  font-weight: 900;
   color: white;
   -webkit-background-clip: text;
   pointer-events: none;
@@ -78,31 +71,10 @@
 }
 
 .title {
+  opacity: 0;
   font-family: "Montserrat";
   font-size: 12px;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.bar {
-  width: 80px;
-  height: 2px;
-  background-color: rgb(59, 59, 59);
-  position: absolute;
-  top: 63%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 99;
-}
-
-#fill {
-  width: 0%;
-  height: 100%;
-  background-color: white;
-  position: relative;
-  top: 0px;
-  left: 0px;
+  padding-top: 75px;
 }
 @media only screen and (max-width: 900px) {
   .text {
