--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,158 +1,158 @@
 * {
-    padding: 0;
-    margin: 0;}
-
-.home {
-    height: 100vh;
-    width: 100%;
-    background-image: url("../img/home.png");
-    background-size: cover;
-    background-position: 70% 50%;
-    color: white;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  padding: 0;
+  margin: 0;
 }
 
-h1{
-    font-family: 'OmegaCentauri', sans-serif;
-    font-size: 6rem;
-    margin-left: 10vw;
-    margin-top: 150px;
+.home {
+  height: 100vh;
+  width: 100%;
+  background-image: url("../img/home.png");
+  background-size: cover;
+  background-position: 70% 50%;
+  color: white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+h1 {
+  font-family: "OmegaCentauri", sans-serif;
+  font-size: 6rem;
+  margin-left: 10vw;
+  margin-top: 150px;
 }
 
 h2 {
-    font-family: 'Montserrat';
-    font-weight: 200;
-    font-size: 4.05rem;
-    margin-left: 10vw;
-
+  font-family: "Montserrat";
+  font-weight: 200;
+  font-size: 4.05rem;
+  margin-left: 10vw;
 }
 
-.homesocials{
-    width: 100%;
-    height: 100px;
-    background: rgb(0,0,36);
-    background: linear-gradient(0deg, rgba(0,0,36,0), rgba(0,0,0,1) 100%);
-    font-family: 'Montserrat';
-    font-weight: 600;
-    font-size: 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center
+.homesocials {
+  width: 100%;
+  height: 100px;
+  background: rgb(0, 0, 36);
+  background: linear-gradient(0deg, rgba(0, 0, 36, 0), rgba(0, 0, 0, 1) 100%);
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .socials {
-    width: 40vw;
-    display: flex;
-    justify-content: space-between;
-    margin-left: 10vw;
+  width: 40vw;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 10vw;
 }
 
 .download {
-    padding-right: 5vw;
+  padding-right: 5vw;
 }
 
 .link:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .HomeRecentProjects {
-    height: 300px;
-    width: 100%;
-    background: rgb(0,0,36);
-    background: linear-gradient(180deg, rgba(0,0,36,0), rgba(0,0,0,1) 100%);
+  height: 300px;
+  width: 100%;
+  background: rgb(0, 0, 36);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 36, 0),
+    rgba(15, 15, 15, 1) 100%
+  );
 }
 
 .RecentProjectsTitle {
-    margin-top: 100px;
-    margin-left: 10vw;
-    font-family: 'Montserrat';
-    font-weight: 200;
-    font-size: 20px;
-    letter-spacing: 20px;
+  margin-top: 100px;
+  margin-left: 10vw;
+  font-family: "Montserrat";
+  font-weight: 200;
+  font-size: 20px;
+  letter-spacing: 20px;
 }
 
 .RecentProjectsDevider {
-    height: 1px;
-    margin-top: 5px;
-    margin-left: 10vw;
-    background-color: white;
+  height: 1px;
+  margin-top: 5px;
+  margin-left: 10vw;
+  background-color: white;
 }
 
 .RecentProjectsItems {
-    margin-left: 10vw;
-    padding-right: 150px;
-    padding-top: 10px;
-    display: flex;
-    justify-content: space-between;
+  margin-left: 10vw;
+  padding-right: 150px;
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .RecentProjectsItem {
-    width: 300px;
+  width: 300px;
 }
 
 h3 {
-    font-family: 'Montserrat';
-    font-weight: 600;
-    font-size: 20px;
-    padding-bottom: 10px;
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 20px;
+  padding-bottom: 10px;
 }
 .RecentProjectsItemText {
-    font-family: 'Montserrat';
-    font-size: 14px;
+  font-family: "Montserrat";
+  font-size: 14px;
 }
 .RecentProjectsItemLink {
-    padding-top: 5px;
-    font-family: 'Montserrat';
-    font-size: 14px;
-    text-decoration: underline;
-    width: min-content;
+  padding-top: 5px;
+  font-family: "Montserrat";
+  font-size: 14px;
+  text-decoration: underline;
+  width: min-content;
 }
 
 .socialsMobile {
-    display: none;
-    width: 40vw;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 15vw;
-    height: 100px;
+  display: none;
+  width: 40vw;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 15vw;
+  height: 100px;
 }
 
-
 @media only screen and (max-width: 900px) {
-    .socials{
-        display: none;
-    }
-    .socialsMobile {
-        display: flex;
-    }
-    h3 {
-        font-size: 16px;
-
-    }
-    h2 {
-        font-size: 30px;
-        margin-left: 15vw;
-
-    }
-    h1 {
-        font-size: 30px;
-        margin-top: -20vh;
-        margin-left: 15vw;
-
-        
-    }
-    .RecentProjectsItems {
-        width: 250vw;  
-        padding-bottom: 10px;      
-    }
-    .RecentProjectsOverflow {
-        overflow-x: auto;
-    }
-    .RecentProjectsDevider, .RecentProjectsTitle, .RecentProjectsItems {
-        margin-left: 15vw;
-    }
-
+  .socials {
+    display: none;
+  }
+  .socialsMobile {
+    display: flex;
+  }
+  h3 {
+    font-size: 16px;
+  }
+  h2 {
+    font-size: 30px;
+    margin-left: 15vw;
+  }
+  h1 {
+    font-size: 30px;
+    margin-top: -20vh;
+    margin-left: 15vw;
+  }
+  .RecentProjectsItems {
+    width: 250vw;
+    padding-bottom: 10px;
+  }
+  .RecentProjectsOverflow {
+    overflow-x: auto;
+  }
+  .RecentProjectsDevider,
+  .RecentProjectsTitle,
+  .RecentProjectsItems {
+    margin-left: 15vw;
+  }
 }
