--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,86 +1,82 @@
 * {
-    color: white;
+  color: white;
 }
 
-.navbarOpen{
-    padding-top: 35px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 500px;
-    height: 100vh;
-    position: fixed;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(20px);
-    z-index: 2;
-
+.navbarOpen {
+  padding-top: 35px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 500px;
+  height: 100vh;
+  position: fixed;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(20px);
+  z-index: 2;
 }
 
-.navbarClose{
-    padding-top: 35px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100px;
-    height: 100vh;
-    position: fixed;
-    box-shadow: inset 0 0 0 200px rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(20px);
-    z-index: 2;
+.navbarClose {
+  padding-top: 35px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100px;
+  height: 100vh;
+  position: fixed;
+  box-shadow: inset 0 0 0 200px rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(20px);
+  z-index: 2;
 }
 
-
-.hamburger{
-    padding: 5px;
-    margin-bottom: 50px;
-    cursor: pointer;
+.hamburger {
+  padding: 5px;
+  margin-bottom: 50px;
+  cursor: pointer;
 }
 .hamburger:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.dottedLine{
-    height: 100px;
-    width: 1px;
-    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='white' stroke-width='1' stroke-dasharray='1%2c 5' stroke-dashoffset='1' stroke-linecap='butt'/%3e%3c/svg%3e");
+.dottedLine {
+  height: 100px;
+  width: 1px;
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='white' stroke-width='1' stroke-dasharray='1%2c 5' stroke-dashoffset='1' stroke-linecap='butt'/%3e%3c/svg%3e");
 }
 .circle {
-    margin: 15px;
-    height: 11px;
-    width: 11px;
-    border: 1px solid white;
-    border-radius: 50px;
+  margin: 15px;
+  height: 11px;
+  width: 11px;
+  border: 1px solid white;
+  border-radius: 50px;
 }
 
 .navLink {
-    margin: 15px;
-    font-family: 'Montserrat';
-    font-size: 20px;
-    
+  margin: 15px;
+  font-family: "Montserrat";
+  font-size: 20px;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 900px) {
-    .dottedLine {
-        display: none;
-    }
-    .circle {
-        display: none;
-    }
-    .navbarClose {
-        height: auto;
-        box-shadow: none;
-        backdrop-filter: none;
-        width: auto;
-    }
-
-    .navbarOpen {
-       width: 100%;
-       height: 100vh;
-    }
-
-    .hamburger {
-        height: 15px;
-    }
+  .dottedLine {
+    display: none;
+  }
+  .circle {
+    display: none;
+  }
+  .navbarClose {
+    height: auto;
+    box-shadow: none;
+    backdrop-filter: none;
+    width: auto;
   }
 
+  .navbarOpen {
+    width: 100%;
+    height: 100vh;
+  }
 
+  .hamburger {
+    height: 15px;
+  }
+}
