--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -55,6 +55,7 @@
   font-family: "Montserrat";
   font-size: 20px;
   cursor: pointer;
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 900px) {
